<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myAppList"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/sky_bkue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/myApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/portifolio_widget_margin"
        android:singleLine="true"
        android:text="@string/app_list_title"
        android:textColor="@android:color/black"
        android:textSize="25dp" />

    <Button
        android:id="@id/spotifyStreamer"
        style="@style/PortifolioButtonStyle"
        android:onClick="onButtonClicked"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@id/scoresApp"
        style="@style/PortifolioButtonStyle"
        android:onClick="onButtonClicked"
        android:text="@string/scores_app" />

    <Button
        android:id="@id/libraryApp"
        style="@style/PortifolioButtonStyle"
        android:onClick="onButtonClicked"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/buildItBigger"
        style="@style/PortifolioButtonStyle"
        android:onClick="onButtonClicked"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@id/xyzReader"
        style="@style/PortifolioButtonStyle"
        android:onClick="onButtonClicked"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@id/capstoneMyOwnApp"
        style="@style/PortifolioButtonStyle"
        android:onClick="onButtonClicked"
        android:text="@string/capstone_my_own_app" />

</LinearLayout>